samples/_failures_safe/1761319222_979244_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84c57d4f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_84c57d4f.c:175:9: error: expected declaration or statement at end of input
  175 |         if (token.type != TOKEN_EOF) {
      |         ^~
./samples/SAFE/__tmp_84c57d4f.c:175:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_84c57d4f.c:175:9: error: expected declaration or statement at end of input
